--- a/style.css
+++ b/style.css
@@ -1,26 +1,48 @@
 html {
     font-family: 'Barlow Semi Condensed', sans-serif;
 }
+body {
+    margin: 0;
+}
+.content {
+    position: relative;
+    margin: auto;
+    width: 415px;
+    height: 896px;
+}
+.main {
+    background: #ffdfb3;
+}
 section {
     display: block;
     margin: auto;
-    position: relative;
+}
+h1 {
+    height: 41px;
+    width: 100%;
+    font-size: 34px;
+    line-height: 41px;
+    text-align: center;
+    color: #FFFFFF;
+    padding-top: 80px;
+    margin: 0;
+    letter-spacing: 3px;
 }
 .graphics {
-    width: 416px;
-    height: 471px;
+    width: 100%;
+    height: 450px;
     background: linear-gradient(225deg, #894AC9 0%, #4D46B1 100%);
 }
 .buttonCase {
     cursor: pointer;
     width: 400px;
-    margin: 75px 0 0 0;
-    color: white;
-    opacity: 0.7;
+    margin: 55px 0 0 0;
+    color: black;
+    opacity: 0.3;
     display: flex;
     z-index: 3;
     justify-content: space-between;
-    font-size: 24px;
+    font-size: 36px;
 }
 .dark {
     width: 416px;
@@ -36,7 +58,7 @@ section {
     position: absolute;
     color: #FFFFFF;
     left: 7.88%;
-    top: 38%;
+    top: 20%;
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size: 12px;
 }
@@ -51,9 +73,6 @@ section {
     position: absolute;
     padding: 0 0 0 188px;
 }
-.line {
-    position: relative;
-}
 .theme {
     position: absolute;
     background: rgba(255, 255, 255, 0.3);
@@ -63,31 +82,10 @@ section {
     padding: 5px;
     transition: all ease 0.5s;
 }
-.theme_2 {
-    position: absolute;
-    background: rgba(255, 255, 255, 0.3);
-    color: #625f5f;
-    border-radius: 50%;
-    margin: 25px 10px 0 360px;
-    padding: 5px;
-    transition: all ease 0.5s;
-}
-.theme, .theme_2:hover {
+.theme:hover {
     cursor: pointer;
-    background: rgba(255, 255, 255, 0.5273);
-}
-h1 {
-    height: 41px;
-    left: 84px;
-    right: 79px;
-    top: 80px;
-    font-size: 34px;
-    line-height: 41px;
-    text-align: center;
-    color: #FFFFFF;
-    margin: 28px 0 0 0;
-    padding-top: 80px;
-    letter-spacing: 3px;
+    background: rgba(226, 199, 199, 0.3);
+    color: #000000;
 }
 .container {
     display: flex;
@@ -192,7 +190,7 @@ ul {
     background: linear-gradient(180deg, #542285 90%, #222266 100%);
 }
 .billing {
-    margin: 20px 0 50px 0;
+    padding: 0 0 40px 0;
     color: rgba(125, 125, 128, 1);
     text-align: center;
 }
@@ -209,31 +207,29 @@ ul {
 }
 .slider {
     position: absolute;
-    height: 170px;
-    width: 300px;
-    margin: auto;
+    width: 370px;
     z-index: 2;
 }
 .slider-line {
     position: relative;
     display: flex;
-    height: 150px;
-    width: 900px;
+    height: 140px;
+    width: 1110px;
     left: 0;
     transition: all ease 1s;
 }
 .slide {
     margin: 10px;
-    height: 150px;
-    width: 300px;
+    height: 140px;
+    width: 370px;
     background: rgba(243, 242, 249, 1);
     border-radius: 10px;
     transition: all ease 0.5s;
 }
 .slide-dark {
     margin: 10px;
-    height: 150px;
-    width: 300px;
+    height: 140px;
+    width: 370px;
     background: linear-gradient(225deg, #262526 0%, #19181A 100%);
     border-radius: 10px;
     color: #fff;
@@ -263,7 +259,7 @@ ul {
     width: 416px;
     height: 170px;
     position: absolute;
-    top: -25%;
+    top: 50px;
     bottom: 0;
     left: 0;
     right: 0;
