--- a/style.css
+++ b/style.css
@@ -1,26 +1,56 @@
 html {
     font-family: 'Barlow Semi Condensed', sans-serif;
     user-select: none;
+    box-sizing: border-box;
 }
 body {
     margin: 0;
+    background: #1a1a1a;
 }
-.content {
+.app {
+   overflow-x: hidden;
+}
+.container {
+    margin: 0 auto;
+    width: 355px;
+    height: 100%;
+}
+.block {
     position: relative;
+    height: 419px;
+    width: 375px;
     margin: auto;
-    width: 415px;
-    height: 896px;
 }
-.main {
+._light {
     background: #ffdfb3;
 }
-section {
-    display: block;
-    margin: auto;
+._bitmap {
+    background: linear-gradient(225deg, #894AC9 0%, #4D46B1 100%);
+}
+.graphic {
+    margin: 0;
+    position: relative;
+}
+._product {
+    height: 249px;
+    padding-bottom: 20px;
+    transition: all ease 0.5s;
+}
+.dark {
+    background: black;
+}
+.product {
+    display: flex;
+    position: relative;
+    padding: 93px 0 0 0;
+    align-items: end;
+}
+._continue {
+    height: 124px;
+    transition: all ease 0.5s;
 }
 h1 {
     height: 41px;
-    width: 100%;
     font-size: 34px;
     line-height: 41px;
     text-align: center;
@@ -29,34 +59,12 @@ h1 {
     margin: 0;
     letter-spacing: 3px;
 }
-.graphics {
-    width: 100%;
-    height: 450px;
-    background: linear-gradient(225deg, #894AC9 0%, #4D46B1 100%);
-}
-.buttonCase {
-    cursor: pointer;
-    width: 400px;
-    margin: 55px 0 0 0;
-    color: black;
-    opacity: 0.3;
-    display: flex;
-    z-index: 3;
-    justify-content: space-between;
-    font-size: 36px;
-}
-.dark {
-    width: 416px;
-    height: 471px;
-    background: black;
-    transition: all ease 0.5s;
-}
 .graph {
     position: absolute;
-    padding-top: 34px;
+    width: 100%;
+    padding-top: 155px;
 }
 .group {
-    position: absolute;
     color: #FFFFFF;
     left: 7.88%;
     top: 20%;
@@ -64,22 +72,22 @@ h1 {
     font-size: 12px;
 }
 .paragraph {
-    margin: 0 0 33px 0;
+    margin: 25px 0 0 0;
 }
 .paragraph::before {
-    position: absolute;
     content: url("img/line/Path 1.svg");
 }
 .girl {
     position: absolute;
-    padding: 0 0 0 188px;
+    left: 40%;
+    top: 25%;
 }
 .theme {
     position: absolute;
     background: rgba(255, 255, 255, 0.3);
     color: #625f5f;
     border-radius: 50%;
-    margin: 25px 10px 0 360px;
+    margin: 25px 10px 0 320px;
     padding: 5px;
     transition: all ease 0.5s;
 }
@@ -87,12 +95,6 @@ h1 {
     cursor: pointer;
     background: rgba(226, 199, 199, 0.3);
     color: #000000;
-}
-.container {
-    display: flex;
-    justify-content: center;
-    padding: 93px 0 20px 0;
-    align-items: end;
 }
 ul {
     list-style-type: none;
@@ -103,34 +105,33 @@ ul {
     font-size: 13px;
 }
 ._1 {
-    height: 151px;
+    height: 131px;
 }
 ._2, ._3 {
-    height: 176px;
+    height: 156px;
 }
-.column  {
+.column {
     width: 118px;
-    margin: 10px;
+    margin: 0 5px 0 5px;
     background: #F3F2F9;
     border-radius: 5px;
     text-align: center;
     transition: all ease 0.5s;
 }
 .dark_theme {
-    width: 118px;
-    margin: 10px;
     background: rgba(55, 54, 64, 1);
-    border-radius: 5px;
-    text-align: center;
     transition: all ease 0.5s;
 }
 .list {
-    height: 151px;
+    width: 105px;
+    height: 131px;
     border-radius: 5px;
+    transition: all ease 0.5s;
+}
+._three {
+    height: 115px;
 }
 .list_dark_theme {
-    height: 151px;
-    border-radius: 5px;
     color: #FFFFFF;
     transition: all ease 0.5s;
 }
@@ -149,10 +150,8 @@ ul {
     font-size: 13px;
     font-weight: bolder;
 }
-._one {
-    background: rgba(252, 167, 89, 1);
-}
 .save p {
+    height: 15px;
     margin: 0;
     padding: 5px;
 }
@@ -168,7 +167,7 @@ ul {
     padding: 3px;
 }
 .num, .month {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
 }
 .month {
@@ -176,13 +175,12 @@ ul {
 }
 .continue {
     font-size: 22px;
-    width: 374px;
+    width: 355px;
     height: 40px;
     color: #FFFFFF;
     background: linear-gradient(225deg, #542285 0%, #222266 100%);
     border-radius: 5px;
     display: block;
-    margin: auto;
     text-align: center;
     padding-top: 10px;
 }
@@ -191,50 +189,56 @@ ul {
     background: linear-gradient(180deg, #542285 90%, #222266 100%);
 }
 .billing {
-    padding: 0 0 40px 0;
+    margin: 0;
+    padding: 20px 0 25px 0;
     color: rgba(125, 125, 128, 1);
     text-align: center;
 }
 .billing::after {
     display: flex;
-    content: '';
     position: absolute;
+    content: '';
     width: 134px;
     height: 5px;
     background: #000000;
     border-radius: 100px;
     left: calc(50% - 134px/2);
-    margin: 26px 0 0 0;
+    margin: 26px 0 9px 0;
+}
+.overflow {
+    overflow: hidden;
+    display: flex;
+    justify-content:center;
+    width: 375px;
+    height: 170px;
+    position: absolute;
+    top: 350px;
+    margin: auto;
 }
 .slider {
     position: absolute;
-    width: 370px;
+    margin: 0 auto;
+    width: 335px;
+    height: 145px;
     z-index: 2;
-}
+ }
 .slider-line {
     position: relative;
     display: flex;
-    height: 140px;
-    width: 1110px;
-    left: 0;
+    width: 1005px;
     transition: all ease 1s;
 }
 .slide {
-    margin: 10px;
+    margin: 3px;
     height: 140px;
-    width: 370px;
+    width: 335px;
     background: rgba(243, 242, 249, 1);
     border-radius: 10px;
     transition: all ease 0.5s;
 }
 .slide-dark {
-    margin: 10px;
-    height: 140px;
-    width: 370px;
     background: linear-gradient(225deg, #262526 0%, #19181A 100%);
-    border-radius: 10px;
     color: #fff;
-    transition: all ease 0.5s;
 }
 .slide-title {
     margin: 20px;
@@ -253,16 +257,18 @@ ul {
     margin: 0 20px 0 20px;
     color: rgba(252, 191, 89, 1);
 }
-.overflow {
-    overflow: hidden;
-    display: flex;
-    justify-content:center;
-    width: 416px;
-    height: 170px;
-    position: absolute;
-    top: 50px;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
+@media() {
+    .buttonCase {
+        cursor: pointer;
+        position: absolute;
+        width: 375px;
+        margin: -20px 0 0 0;
+        color: black;
+        opacity: 0.3;
+        display: flex;
+        z-index: 3;
+        justify-content: space-between;
+        font-size: 36px;
+    }
 }
+
