--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'SF-Pro-Text', sans-serif;
   user-select: none;
   box-sizing: border-box;
 
@@ -330,3 +330,9 @@ html {
   }
 }
 
+@font-face {
+  font-family: "SF-Pro";
+  src: url("fonts/SF-Pro-Text-Bold.ot") format("truetype");
+  font-style: normal;
+  font-weight: normal;
+}
