--- a/style.css
+++ b/style.css
@@ -65,8 +65,6 @@ html body .app .block .container .product {
   align-items: end;
 }
 html body .app .block .container .product .column {
-  width: 33.3%;
-  margin: 0 5px 0 5px;
   background: #F3F2F9;
   border-radius: 5px;
   text-align: center;
@@ -103,8 +101,12 @@ html body .app .block .container .product .column .list_dark_theme {
   color: #FFFFFF;
   transition: all ease 0.5s;
 }
+html body .app .block .container .product .column ._two {
+  border-radius: 0;
+}
 html body .app .block .container .product .column ._three {
   height: 115px;
+  border-radius: 0;
 }
 html body .app .block .container .product .column .save {
   background: #fcbf59;
@@ -139,9 +141,15 @@ html body .app .block .container .product .dark_theme {
 }
 html body .app .block .container .product ._1 {
   height: 131px;
+  margin: 0 5px 0 0;
 }
-html body .app .block .container .product ._2, html body .app .block .container .product ._3 {
+html body .app .block .container .product ._2 {
   height: 156px;
+  margin: 0 5px 0 5px;
+}
+html body .app .block .container .product ._3 {
+  height: 156px;
+  margin: 0 0 0 5px;
 }
 html body .app .block .container .continue {
   font-size: 22px;
